--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
       <div class="hero-right">
         <div class="hero-circle">
-          <img src="/images/mayowa.png" alt="my img" />
+          <img src="/images/mayor.png" alt="my img" />
         </div>
         <!-- <div class="hero-image">
           
@@ -101,7 +101,7 @@
       <div class="about">
         <div class="about-left">
           <div class="left-image">
-            <img src="./images/mayowa.png" alt="about-img" />
+            <img src="./images/mayor.png" alt="about-img" />
           </div>
         </div>
 
@@ -194,16 +194,17 @@
 
       <div class="footer-icons">
         <div class="socials">
-          <i class="fa fa-facebook" aria-hidden="true"></i>
+          <a href="https://web.facebook.com/mayowatimileyin/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
         </div>
         <div class="socials">
-          <i class="fa fa-twitter" aria-hidden="true"></i>
+         <a href="https://twitter.com/Ayedun39" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
         </div>
         <div class="socials">
-          <i class="fa fa-instagram" aria-hidden="true"></i>
+         <a href="https://www.instagram.com/ayedunmayowa/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
         </div>
         <div class="socials">
-          <i class="fa fa-linkedin" aria-hidden="true"></i>
+          <a href="www.linkedin.com/ayedun/mayowa/olayiwola-8b0538271" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a> 
+          
         </div>
       </div>
 
