I added my gallery section and made my portfolio responsive

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="path/to/font-awesome/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/mediaquery.css" />
     <script src="https://use.fontawesome.com/34b9a4ac06.js"></script>
   </head>
   <body>
@@ -36,7 +37,7 @@
     <section class="hero-section">
       <div class="hero-left">
         <div class="hero-content">
-          <h3>Hi,I'm</h3>
+          <h3>Hi, I'm</h3>
           <h1>Ayedun Mayowa</h1>
           <p>
             A software developer with a passion for building innovative and
@@ -118,6 +119,34 @@
 
             <button>Reach out</button>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Gallery section -->
+    <section>
+      <div class="gallery">
+        <h1>My gallery</h1>
+        
+        <div class="gallery-box">
+          <div class="gallery-card">
+          <img src="/images/mayor.jpg" alt="gallery-image"/>
+        </div>
+          <div class="gallery-card">
+          <img src="/images/mayor.jpg" alt="gallery-image"/>
+        </div>
+          <div class="gallery-card">
+          <img src="/images/mayor.jpg" alt="gallery-image"/>
+        </div>
+          <div class="gallery-card">
+          <img src="/images/mayor.jpg" alt="gallery-image"/>
+        </div>
+          <div class="gallery-card">
+          <img src="/images/mayor.jpg" alt="gallery-image"/>
+        </div>
+          <div class="gallery-card">
+          <img src="/images/mayor.jpg" alt="gallery-image"/>
+        </div>
         </div>
       </div>
     </section>
